--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="img\15974077-paisagem-noturna-com-arvores-em-silhueta-e-lua-cheia-vista-da-floresta-escura-ilustracaoial-de-paisagem-vetor.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="site.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <title>Meu Portfólio</title>
 <body background="img\15974077-paisagem-noturna-com-arvores-em-silhueta-e-lua-cheia-vista-da-floresta-escura-ilustracaoial-de-paisagem-vetor.jpg">
